--- a/saudiSubscription/ViewController/StoryBoard/IPOsTitleTableViewCell.xib
+++ b/saudiSubscription/ViewController/StoryBoard/IPOsTitleTableViewCell.xib
@@ -29,16 +29,19 @@
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="tyv-E5-Ta5">
                                 <rect key="frame" x="160" y="0.0" width="160" height="59"/>
+                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                         </subviews>
+                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
                             <constraint firstAttribute="height" constant="59" id="bUE-Ym-E0C"/>
                         </constraints>
                     </stackView>
                 </subviews>
+                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                 <constraints>
                     <constraint firstAttribute="trailing" secondItem="6Dj-aX-IPb" secondAttribute="trailing" id="ebE-1q-Aye"/>
                     <constraint firstAttribute="bottom" secondItem="6Dj-aX-IPb" secondAttribute="bottom" id="hUH-qV-rCd"/>
@@ -47,6 +50,7 @@
                 </constraints>
             </tableViewCellContentView>
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
+            <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
             <connections>
                 <outlet property="offerEndDate" destination="Q0j-8r-ukJ" id="vO8-E0-Tjk"/>
                 <outlet property="offerName" destination="tyv-E5-Ta5" id="JFP-0b-Xnd"/>
